# frr

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  mockup.html  pyproject.toml  requirements.txt
db/: password.txt
mysql/: Dockerfile  init.sql
src/: app.py  app_config.py  db.py  db_test.py  federal_register_service.py  forms.py  gunicorn_config.py  models.py
src/services/: __init__.py
src/static/: styles.css
src/templates/: base.html  index.html
tests/: main.py
